Global CSS: ensure first child of `.row is left-aligned

--- a/src/global.css
+++ b/src/global.css
@@ -211,6 +211,10 @@ pre {
 			flex-basis: 20rem;
 		}
 	}
+
+	> :first-child {
+		text-align: start;
+	}
 }
 
 .column {
